test/Fail/Issue1698-data.agda
data Foo : Set where
  foo = Foo

-- Bad error message WAS:
-- A postulate block can only contain type signatures or instance blocks
