test/Fail/Issue1698-data.err
Issue1698-data.agda:2,7-7
Issue1698-data.agda:2,7: Parse error
=<ERROR>
 Foo

-- Bad error message WAS...
